--- a/R2.md
+++ b/R2.md
@@ -55,9 +55,31 @@ Também iniciei um projeto de **Todo List**, porém vai ser coisa simples, mais 
 
 **Aprendizados:** Hoje foi um dia com mecanicas bem simples sendo apresentadas, porém no fim ao adicionar a placa foi a parte mais interessante que foi como criar um balão de fala.
 
-**Links:** 
+**Links:**  
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 11: Save & Load)](https://youtu.be/c1gx7NMZ0Uc)
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 12: Parent + child objects)](https://youtu.be/---0DLrskxQ)
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 13: Sound effects)](https://youtu.be/AfQFZXdmAEs)
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 14: Dying )](https://youtu.be/d7ztOC4Jffo)
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 15: Signposts)](https://youtu.be/1gUgIry5JPw)
+
+---
+
+### Dia 4: 05 de Janeiro, 2022
+
+
+**Progresso do dia:** Hoje finalizei os 10 vídeos restantes na playlist, porém no quando tava fazendo o tutorial do vídeo que dizia respeito a deixar o jogo fullscreen dei muito ctrl + z e acabei perdendo todo o progresso, depois disso só assisti os vídeos mesmo e não cheguei a programar mais, porém acredito que amanhã já começo a programar algo que esteja fora dos tutoriais.
+
+**Aprendizados:** Hoje o que deu pra aprender mais, foi fazer itens que da pra pegar, um pouco sobre animações de queda do jogador e fazer os inimigos atacares de volta, fora isso não deu pra absorver tanto. Agora é tentar fazer por conta própria mesmo e ver o que faltou entender.
+
+**Links:**  
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 16: Mouse menus)](https://youtu.be/jl0Ga07tZWw)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 17: Enemies & Ledges)](https://youtu.be/QQvZ5EP8ZPE)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 18: Jump buffer)](https://youtu.be/fUPyU4qkCOo)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 19: Crates & Pickups)](https://youtu.be/zrnmegZhLFU)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 20: Sparks & Dust)](https://youtu.be/6EJzYfmmH9w)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 21: Enemies shoot back)](https://youtu.be/xUShdxWlcxg)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 22: Fullscreen & GUI issues)](https://youtu.be/tWKQ5FAYIBQ)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 23: Score tracking)](https://youtu.be/4wmVQe9RaDE)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 24: Global flags)](https://youtu.be/Bhl6FoOwDvs)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 25: Endings)](https://youtu.be/QUqIZLolFNI)
+[GameMaker Studio 2: Complete Platformer Tutorial (Part 26: Gun Kickback)](https://youtu.be/q5no2-HeDFo)
