--- a/R2.md
+++ b/R2.md
@@ -83,3 +83,19 @@ Também iniciei um projeto de **Todo List**, porém vai ser coisa simples, mais 
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 24: Global flags)](https://youtu.be/Bhl6FoOwDvs)
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 25: Endings)](https://youtu.be/QUqIZLolFNI)
 [GameMaker Studio 2: Complete Platformer Tutorial (Part 26: Gun Kickback)](https://youtu.be/q5no2-HeDFo)
+
+---
+
+### Dia5: 06 de Janeiro, 2022
+
+**Progresso do dia:** Criei o projeto da feito na game jam de 2020, e comecei a aplicar os conceitos vistos nos tutoriais
+
+**Aprendizados:** Não foi muito aprendizado, foi mais reforço
+
+---
+
+### Dia 6: 07 de Janeiro, 2022
+
+**Progresso do dia:** Hoje melhorei um pouco a estrutura do projeto e adicionei a feature de fazer o personagem se transoformar, todas os sprites das formas ja foram adicionados, excedo a de demonio, porque acredito que ainda faltam alguns específicos
+
+**Aprendizados:** Aparentemento nas structs do GameMaker que funcionam como um objeto não tem como acessar diretamente então por enquanto to usando uma variavel de controle pra definir em qual momento cada forma vai ser usada.
