--- a/R2.md
+++ b/R2.md
@@ -99,3 +99,11 @@ Também iniciei um projeto de **Todo List**, porém vai ser coisa simples, mais 
 **Progresso do dia:** Hoje melhorei um pouco a estrutura do projeto e adicionei a feature de fazer o personagem se transoformar, todas os sprites das formas ja foram adicionados, excedo a de demonio, porque acredito que ainda faltam alguns específicos
 
 **Aprendizados:** Aparentemento nas structs do GameMaker que funcionam como um objeto não tem como acessar diretamente então por enquanto to usando uma variavel de controle pra definir em qual momento cada forma vai ser usada.
+
+---
+
+### Dia 7: 08 de Janeiro, 2022
+
+**Progresso do dia:** Hoje eu consegui implementar o sistema de transformação, tentei adicionar pelo menos o pulo duplo na variante do **AR**, mas não consegui, também deu pra implementar um timer para voltar a forma normal depois de um tempo, o código ta bem bagunçado ainda,
+
+**Aprendizados:** Tentei mexer com timer, mas o que eu queria mesmo era alarme, acredito que times seja algo parecido com o setInterval do javascript, talvez seja melhor usar um script para salvar todas as funções utilizadas no player pra não deixar bagunçado
