dia 0 100 days of code

--- a/R2.md
+++ b/R2.md
@@ -7,103 +7,9 @@
 **Aprendizados:**
 
 **Links:** -->
-### Dia 0: 01 de Janeiro, 2022
-**Progresso do dia:** Hoje comecei continuei meus estudos no GameMaker Studio 2, vi 3 videos, implementei o que foi mostrado neles, e comecei a ler a documentação, provavelmente só vou falar da documentação novamente quando eu terminar de ler ela, mas por enquanto tá sendo bem divertido, tô vendo o básico da engine mesmo
+### Dia 0: 09 de Março, 2024
+**Progresso do dia:** Hoje comecei a fazer o aplicativo que tinha pensado tem bastante tempo, que é pra usar quando for jogar beach tenis, usando o expo e pela primeira vez usando o android studio no lugar do meu celular.
 
-**Aprendizados:** Acredito que o maior aprendizado de hoje, foi uma coisa simples, mas que achei bem massa, foi o jeio de fazer o personagem se mover na horizontal sem ter que fazer ifs pra isso, fazendo algo do tipo `var move = key_right - key_left` pra levar em conta que quando é negativo ele está se movendo pra esquerda e positivo pra direita.
-
-**Links:**   
-[Documentação GameMaker](https://manual-br.yoyogames.com/#t=Content.htm)  
-[[BR] Crie Seu Primeiro Jogo - Guselect | GameMaker](https://youtu.be/ypo83R7sIg0)  
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 1: Basics)](https://youtu.be/izNXbMdu348)  
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 2: Animated Player)](https://youtu.be/Y6l02DcpSR4)  
+**Aprendizados:** Não teve nada de novo hoje, mas estou pegando o ritmo novamente, visto que tinha bastante tempo que eu não programava pra mim, só por programar mesmo.
 
 ---
-
-### Dia 1: 02 de Janeiro, 2022
-
-**Progresso do dia:** Hoje vi mais 3 vídeos da playlist sobre fazer um jogo de plataforma e a partir deles foi adicionado a arma do jodador, o inimigo do jogo e por fim foi adicionada a função de interagir com o jogo atraves do controle
-
-**Aprendizados:** Acredito que principalmente a parte de mexer com angulos, com relação a adição da arma e os tiros do jogador e também o momento que o inimigo morre, que é criado um novo objeto para o inimigo morto o objeto do inimigo é destruido, e sobre a adição do controle foi tudo novo pra mim no dia de hoje.
-
-**Links:**   
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 3: Shooting & Recoil)](https://youtu.be/fCeyiEcWRAs)  
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 4: Enemies, Hitflash etc)](https://youtu.be/JsVqc2dnftU)  
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 5: Gamepads / Controllers)](https://www.youtube.com/watch?v=5WGesYns4mk&ab_channel=ShaunSpalding)  
-
----
-
- ### Dia 2: 03 de Janeiro, 2022
-
-**Progresso do dia:** Hoje na série de tutoriais de GameMaker que estou vendo, fiz um script para a tela tremer e poder usar ele em diversos outros objetos, também fiz um background em parallax e uma tela de Menu que eu achei que fosse necessário bem mais código pra fazer, mas a engine abstrai muita coisa.
-Também iniciei um projeto de **Todo List**, porém vai ser coisa simples, mais pra colocar em prática um pouco de docker usando banco de dados MariaDB inicialmente, tentando documentar todas as partes importantes porque pode ser útil para o TCC no fim pretendo hospedar tanto o banco quanto o backend.
-
-**Aprendizados:** Todos  os conceitos foram novos pra mim com relação a desenvolvimento de jogos, deu pra absorver bastante como a engine funciona principalmente com relação ao parallax.
-
-**Links:**  
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 8: Screenshake)](https://youtu.be/r9OYXCUydGg)  
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 9: Parallax backgrounds)](https://youtu.be/nAwKpiOfR-k)  
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 10: Menu screen)](https://youtu.be/fWAhi10q1ZE)  
-
----
-
-### Dia 3: 04 de Janeiro, 2022
-
-> O plano é tentar finalizar os 10 vídeos restantes amanhã, para no dia seguinte já começar a fazer o jogo que fizemos na jam de 2020 que não chegamos a terminar
-
-**Progresso do dia:** Hoje fiz a parte de salvar e carregar o jogo de forma mais simples, usar um objeto pai que herda as caracteristicas do objeto filho, foram adicionados os sons do jogos, a colisão com o inimigo resultado em moste e por fim foi adicionada uma placa que ao ser clicada abre um balão de fala, tudo com base nos tutoriais.
-
-**Aprendizados:** Hoje foi um dia com mecanicas bem simples sendo apresentadas, porém no fim ao adicionar a placa foi a parte mais interessante que foi como criar um balão de fala.
-
-**Links:**  
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 11: Save & Load)](https://youtu.be/c1gx7NMZ0Uc)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 12: Parent + child objects)](https://youtu.be/---0DLrskxQ)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 13: Sound effects)](https://youtu.be/AfQFZXdmAEs)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 14: Dying )](https://youtu.be/d7ztOC4Jffo)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 15: Signposts)](https://youtu.be/1gUgIry5JPw)
-
----
-
-### Dia 4: 05 de Janeiro, 2022
-
-
-**Progresso do dia:** Hoje finalizei os 10 vídeos restantes na playlist, porém no quando tava fazendo o tutorial do vídeo que dizia respeito a deixar o jogo fullscreen dei muito ctrl + z e acabei perdendo todo o progresso, depois disso só assisti os vídeos mesmo e não cheguei a programar mais, porém acredito que amanhã já começo a programar algo que esteja fora dos tutoriais.
-
-**Aprendizados:** Hoje o que deu pra aprender mais, foi fazer itens que da pra pegar, um pouco sobre animações de queda do jogador e fazer os inimigos atacares de volta, fora isso não deu pra absorver tanto. Agora é tentar fazer por conta própria mesmo e ver o que faltou entender.
-
-**Links:**  
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 16: Mouse menus)](https://youtu.be/jl0Ga07tZWw)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 17: Enemies & Ledges)](https://youtu.be/QQvZ5EP8ZPE)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 18: Jump buffer)](https://youtu.be/fUPyU4qkCOo)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 19: Crates & Pickups)](https://youtu.be/zrnmegZhLFU)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 20: Sparks & Dust)](https://youtu.be/6EJzYfmmH9w)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 21: Enemies shoot back)](https://youtu.be/xUShdxWlcxg)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 22: Fullscreen & GUI issues)](https://youtu.be/tWKQ5FAYIBQ)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 23: Score tracking)](https://youtu.be/4wmVQe9RaDE)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 24: Global flags)](https://youtu.be/Bhl6FoOwDvs)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 25: Endings)](https://youtu.be/QUqIZLolFNI)
-[GameMaker Studio 2: Complete Platformer Tutorial (Part 26: Gun Kickback)](https://youtu.be/q5no2-HeDFo)
-
----
-
-### Dia5: 06 de Janeiro, 2022
-
-**Progresso do dia:** Criei o projeto da feito na game jam de 2020, e comecei a aplicar os conceitos vistos nos tutoriais
-
-**Aprendizados:** Não foi muito aprendizado, foi mais reforço
-
----
-
-### Dia 6: 07 de Janeiro, 2022
-
-**Progresso do dia:** Hoje melhorei um pouco a estrutura do projeto e adicionei a feature de fazer o personagem se transoformar, todas os sprites das formas ja foram adicionados, excedo a de demonio, porque acredito que ainda faltam alguns específicos
-
-**Aprendizados:** Aparentemento nas structs do GameMaker que funcionam como um objeto não tem como acessar diretamente então por enquanto to usando uma variavel de controle pra definir em qual momento cada forma vai ser usada.
-
----
-
-### Dia 7: 08 de Janeiro, 2022
-
-**Progresso do dia:** Hoje eu consegui implementar o sistema de transformação, tentei adicionar pelo menos o pulo duplo na variante do **AR**, mas não consegui, também deu pra implementar um timer para voltar a forma normal depois de um tempo, o código ta bem bagunçado ainda,
-
-**Aprendizados:** Tentei mexer com timer, mas o que eu queria mesmo era alarme, acredito que times seja algo parecido com o setInterval do javascript, talvez seja melhor usar um script para salvar todas as funções utilizadas no player pra não deixar bagunçado
